# mountainkidai-internship-assessment

./: README.md  comparision.txt  run.ps1
js/: benchmark.js  nutrition.js  nutritional_score.js  package-lock.json  package.json  server.js  test.js  test.json
js/public/: index.html
js/test/: nutritional_score.test.js
rust/: Cargo.toml  benchmark.lua
rust/nutritional_calculator/: Cargo.toml
rust/nutritional_calculator/src/: main.rs
rust/src/: lib.rs  main.rs
